--- a/src/Pages/Links/Style.css
+++ b/src/Pages/Links/Style.css
@@ -1,13 +1,20 @@
+.list {
+   position: absolute;
+}
+
 .btn {		
-    position: absolute;	
+	text-align: center;
 	font-size: 1.4rem;
 	color: var(--inv);
 	letter-spacing: 1.1rem;
 	text-transform: uppercase;
+	font-weight: 900;
 	cursor: pointer;
 	user-select: none;
+	margin: 15vh;
 }
 
 .btn:hover {
    color: blue;
 }
+
