--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
-body {
-  margin: 0;
-  padding: 0;
+html body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
 }
