--- a/src/Pages/Gallery/style.css
+++ b/src/Pages/Gallery/style.css
@@ -1,11 +1,12 @@
 .parallaxScroll1 {
-    background-image: url("https://images.unsplash.com/photo-1439778615639-28529f7628bc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=634&q=80");
+    background-image: url("https://dl.dropboxusercontent.com/s/nu6a5s1h29im3r5/DSC_7015.jpg?dl=0");
   /* Create the parallax scrolling effect */
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 50%;
+  background-size: 31%;
   height: 100%;
+  overflow: hidden;
 }
 
 @media only screen and (max-width: 960px) {
