--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,9 @@ html body {
     padding: 0px;
     overflow-x: hidden; 
 }
+
+::-webkit-scrollbar {
+    display: none;
+  -ms-overflow-style: none; 
+  scrollbar-width: none; 
+}
