--- a/src/Pages/Home/Homestyle.css
+++ b/src/Pages/Home/Homestyle.css
@@ -1,4 +1,8 @@
 .container {
-   background: linear-gradient(90deg, rgba(234,235,237,1) 50%, rgba(17,35,47,1) 50%);
+   background: linear-gradient(90deg, rgba(244,207,191,1) 50%, rgba(17,35,47,1) 50%);
    height: 100vh;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   
 }
