resume,contact details

--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,9 @@ html body {
     overflow-x: hidden; 
 }
 
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar 
     display: none;
   -ms-overflow-style: none; 
   scrollbar-width: none; 
-}
+
+*/
