--- a/src/Pages/Contact/style.css
+++ b/src/Pages/Contact/style.css
@@ -1,8 +1,7 @@
-.container {
+.backGround {
    background: linear-gradient(90deg, rgba(244,207,191,1) 15%, rgba(17,35,47,1) 100%);
    height: 100vh;
    display: flex;
    align-items: center;
    justify-content: center;
 }
-
